update term matching

--- a/src/02_term_matching/01_OECD_term_matching.ipynb
+++ b/src/02_term_matching/01_OECD_term_matching.ipynb
@@ -30,9 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dab3dj/.conda/envs/CO_BERT/lib/python3.8/site-packages/gensim/similarities/__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -55,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(\"/home/dab3dj/git/dspg21RnD/data/dspg21RnD/smaller-final-dataset.pkl\")\n",
-    "\n",
+    "#df = pd.read_pickle(\"/home/dab3dj/git/dspg21RnD/data/dspg21RnD/smaller-final-dataset.pkl\")\n",
+    "df = pd.read_pickle(\"/home/dab3dj/git/dspg21RnD/data/dspg21RnD/smaller-final-dataset2.pkl\")\n",
     "df.reset_index(inplace = True)"
    ]
   },
@@ -211,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,41 +389,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def term_match_nterms(list):\n",
+    "def term_match_final(list):\n",
     "    matched_idx = []\n",
     "    matched_words = []\n",
     "    core_count = 0\n",
     "    noncore_count =0\n",
     "    \n",
+    "    # single term matching\n",
+    "    for word in list:\n",
+    "        if (word in core_single_terms and word not in matched_words):\n",
+    "            core_count+=1\n",
+    "            matched_words.append(word)\n",
+    "        if (word in noncore_single_terms and word not in matched_words):\n",
+    "            noncore_count+=1\n",
+    "            matched_words.append(word)\n",
+    "    \n",
+    "    \n",
+    "    # ngram term matching\n",
     "    # check core terms\n",
     "    for term in core_n_terms:\n",
+    "        # empty matched word lists before going to next term\n",
+    "        matched_idx = []\n",
+    "        \n",
     "        if (all(x in list for x in term.split())):\n",
+    "            # for every word in core terms\n",
     "            for word in term.split():\n",
+    "                # save the index of the token that matches the core term\n",
     "                matched_idx.append([i for i, element in enumerate(list) if element == word])\n",
-    "                matched_words.append(word)\n",
-    "\n",
+    "                \n",
     "            # see if the indices <= 2 words apart\n",
     "            for i in matched_idx[0]:\n",
     "                for j in matched_idx[1]:\n",
     "                    if (len(matched_idx) > 2):\n",
     "                        for k in matched_idx[2]:\n",
+    "                            # are indicies <=2 and is word not already in list\n",
     "                            if((k - j)<=2 and (j - i)<=2 and\n",
     "                              (k - j)>0 and (j - i)>0):\n",
+    "                                # if so, increase count and append word\n",
     "                                core_count += 1\n",
+    "                                if list[i] not in matched_words:\n",
+    "                                    matched_words.append(list[i])\n",
+    "                                if list[j] not in matched_words:\n",
+    "                                    matched_words.append(list[j])\n",
+    "                                if list[k] not in matched_words:\n",
+    "                                    matched_words.append(list[k])\n",
+    "                                \n",
     "                    else:\n",
+    "                        # are indicies <=2 and is word not already in list\n",
     "                        if((j - i)<=2 and (j - i)>0):\n",
+    "                            # if so, increase count and append word\n",
     "                            core_count += 1\n",
-    "        \n",
+    "                            if list[i] not in matched_words:\n",
+    "                                matched_words.append(list[i])\n",
+    "                            if list[j] not in matched_words:\n",
+    "                                matched_words.append(list[j])\n",
+    "                    \n",
     "    # check noncore terms                  \n",
     "    for term in noncore_n_terms:\n",
+    "        # empty matched word list before going to next term\n",
+    "        matched_idx = []\n",
+    "        \n",
     "        if (all(x in list for x in term.split())):\n",
     "            for word in term.split():\n",
     "                matched_idx.append([i for i, element in enumerate(list) if element == word])\n",
-    "                matched_words.append(word)\n",
     "\n",
     "            # see if the indices <= 2 words apart\n",
     "            for i in matched_idx[0]:\n",
@@ -424,10 +465,24 @@
     "                            if((k - j)<=2 and (j - i)<=2 and\n",
     "                              (k - j)>0 and (j - i)>0):\n",
     "                                noncore_count += 1\n",
+    "                                if list[i] not in matched_words:\n",
+    "                                    matched_words.append(list[i])\n",
+    "                                if list[j] not in matched_words:\n",
+    "                                    matched_words.append(list[j])\n",
+    "                                if list[k] not in matched_words:\n",
+    "                                    matched_words.append(list[k])\n",
+    "                                \n",
     "                    else:\n",
     "                        if((j - i)<=2 and (j - i)>0):\n",
     "                            noncore_count += 1\n",
-    "\n",
+    "                            if list[i] not in matched_words:\n",
+    "                                    matched_words.append(list[i])\n",
+    "                            if list[j] not in matched_words:\n",
+    "                                    matched_words.append(list[j])\n",
+    "                            \n",
+    "                            \n",
+    "    \n",
+    "    \n",
     "    if (core_count >= 1 or noncore_count >= 2):\n",
     "        return matched_words\n",
     "    else:\n",
@@ -437,7 +492,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def term_match_nterms(list):\n",
+    "#     matched_idx = []\n",
+    "#     matched_words = []\n",
+    "#     core_count = 0\n",
+    "#     noncore_count =0\n",
+    "    \n",
+    "#     # check core terms\n",
+    "#     for term in core_n_terms:\n",
+    "#         # empty matched word lists before going to next term\n",
+    "#         matched_idx = []\n",
+    "        \n",
+    "#         if (all(x in list for x in term.split())):\n",
+    "#             # for every word in core terms\n",
+    "#             for word in term.split():\n",
+    "#                 # save the index and string of the token that matches the core term\n",
+    "#                 matched_idx.append([i for i, element in enumerate(list) if element == word])\n",
+    "                \n",
+    "                \n",
+    "\n",
+    "#             # see if the indices <= 2 words apart\n",
+    "#             for i in matched_idx[0]:\n",
+    "#                 for j in matched_idx[1]:\n",
+    "#                     if (len(matched_idx) > 2):\n",
+    "#                         for k in matched_idx[2]:\n",
+    "#                             print(matched_words, matched_idx)\n",
+    "#                             if((k - j)<=2 and (j - i)<=2 and\n",
+    "#                               (k - j)>0 and (j - i)>0):\n",
+    "#                                 core_count += 1\n",
+    "#                                 matched_words.append(list[i])\n",
+    "#                                 matched_words.append(list[j])\n",
+    "#                                 matched_words.append(list[k])\n",
+    "                                \n",
+    "#                     else:\n",
+    "#                         if((j - i)<=2 and (j - i)>0):\n",
+    "#                             core_count += 1\n",
+    "#                             matched_words.append(list[i])\n",
+    "#                             matched_words.append(list[j])\n",
+    "        \n",
+    "#     # check noncore terms                  \n",
+    "#     for term in noncore_n_terms:\n",
+    "#         # empty matched word list before going to next term\n",
+    "#         matched_idx = []\n",
+    "        \n",
+    "#         if (all(x in list for x in term.split())):\n",
+    "#             for word in term.split():\n",
+    "#                 matched_idx.append([i for i, element in enumerate(list) if element == word])\n",
+    "\n",
+    "#             # see if the indices <= 2 words apart\n",
+    "#             for i in matched_idx[0]:\n",
+    "#                 for j in matched_idx[1]:\n",
+    "#                     if (len(matched_idx) > 2):\n",
+    "#                         for k in matched_idx[2]:\n",
+    "#                             if((k - j)<=2 and (j - i)<=2 and\n",
+    "#                               (k - j)>0 and (j - i)>0 and \n",
+    "#                               (list[i] not in matched_words and \n",
+    "#                                list[j] not in matched_words and\n",
+    "#                                list[k] not in matched_words)):\n",
+    "#                                 noncore_count += 1\n",
+    "#                                 matched_words.append(list[i])\n",
+    "#                                 matched_words.append(list[j])\n",
+    "#                                 matched_words.append(list[k])\n",
+    "                                \n",
+    "#                     else:\n",
+    "#                         if((j - i)<=2 and (j - i)>0 and \n",
+    "#                            (list[i] not in matched_words and \n",
+    "#                            list[j] not in matched_words)):\n",
+    "#                             noncore_count += 1\n",
+    "#                             matched_words.append(list[i])\n",
+    "#                             matched_words.append(list[j])\n",
+    "#     print(matched_words)                   \n",
+    "#     if (core_count >= 1 or noncore_count >= 2):\n",
+    "#         return matched_words\n",
+    "#     else:\n",
+    "#         #return False\n",
+    "#         return []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,34 +584,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_classified['IS_AI_1']=df_classified['final_frqwds_removed'].apply(term_match)"
+    "# # using final tokens WITHOUT frequent words \n",
+    "df_classified['IS_AI_no_frq']=df_classified['final_frqwds_removed'].apply(term_match_final)\n",
+    "# df_classified['IS_AI_1']=df_classified['final_frqwds_removed'].apply(term_match)\n",
+    "# df_classified['IS_AI_2']=df_classified['final_frqwds_removed'].apply(term_match_nterms)\n",
+    "# df_classified['IS_AI'] = df_classified['IS_AI_1'] + df_classified['IS_AI_2']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_classified['IS_AI_2']=df_classified['final_frqwds_removed'].apply(term_match_nterms)"
+    "# using final tokens WITH frequent words\n",
+    "df_classified['IS_AI_frq']=df_classified['final_tokens'].apply(term_match_final)\n",
+    "# df_classified['IS_AI_1_frq']=df_classified['final_tokens'].apply(term_match)\n",
+    "# print(\"step 1 done\")\n",
+    "# df_classified['IS_AI_2_frq']=df_classified['final_tokens'].apply(term_match_nterms)\n",
+    "# print(\"step 2 done\")\n",
+    "# df_classified['IS_AI_frq'] = df_classified['IS_AI_1_frq'] + df_classified['IS_AI_2_frq']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_classified['IS_AI'] = df_classified['IS_AI_1'] + df_classified['IS_AI_2']"
+    "# using tokens without ngrams\n",
+    "df_classified['IS_AI_stop']=df_classified['stopwds_removed'].apply(term_match_final)\n",
+    "# df_classified['IS_AI_1_stop']=df_classified['stopwds_removed'].apply(term_match)\n",
+    "# print(\"step 1 done\")\n",
+    "# df_classified['IS_AI_2_stop']=df_classified['stopwds_removed'].apply(term_match_nterms)\n",
+    "# print(\"step 2 done\")\n",
+    "# df_classified['IS_AI_stop'] = df_classified['IS_AI_1_stop'] + df_classified['IS_AI_2_stop']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ai_no_frq = df_classified[df_classified['IS_AI_no_frq'].astype(bool)]\n",
+    "ai_frq = df_classified[df_classified['IS_AI_frq'].astype(bool)]\n",
+    "ai_stop = df_classified[df_classified['IS_AI_stop'].astype(bool)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6516, 37)\n",
+      "(7364, 37)\n",
+      "(7835, 37)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ai_no_frq.shape)\n",
+    "print(ai_frq.shape)\n",
+    "print(ai_stop.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_classified['IS_AI'] = df_classified['IS_AI_no_frq'] + df_classified['IS_AI_frq'] + df_classified['IS_AI_stop']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,22 +677,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ai['IS_AI'] = ai['IS_AI'].apply(set)\n",
+    "ai['IS_AI'] = ai['IS_AI'].apply(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ai.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5747, 35)"
+       "(7933, 38)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ai.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ai.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ai.to_csv(\"~/git/dspg21RnD/data/dspg21RnD/new_matched_ai_abstracts.csv\", index=False)"
    ]
   },
   {
@@ -517,6 +749,15 @@
     "##### UPDATED: \n",
     "* 5747/690814\n",
     "* ~0.83%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### UPDATED with tokens with frequent words: \n",
+    "* 7933/690814\n",
+    "* ~1.15%"
    ]
   },
   {
@@ -699,9 +940,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-HT_Bert]",
+   "display_name": "Python [conda env:.conda-CO_BERT]",
    "language": "python",
-   "name": "conda-env-.conda-HT_Bert-py"
+   "name": "conda-env-.conda-CO_BERT-py"
   },
   "language_info": {
    "codemirror_mode": {
