--- a/src/03_ai_wiki/10_nmf.ipynb
+++ b/src/03_ai_wiki/10_nmf.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,16 +321,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 0\n"
+      "Iteration 0\n",
+      "  Model time: 100.6097903251648\n",
+      "  Coherence time: 47.61140203475952\n",
+      "Number of topics = 5 complete.\n",
+      "  Model time: 113.88717198371887\n",
+      "  Coherence time: 59.43815517425537\n",
+      "Number of topics = 10 complete.\n",
+      "  Model time: 215.1825249195099\n",
+      "  Coherence time: 70.74016237258911\n",
+      "Number of topics = 15 complete.\n"
      ]
     }
    ],
    "source": [
     "# code copied from https://datascienceplus.com/evaluation-of-topic-modeling-topic-coherence/\n",
     "# minor alterations made\n",
-    "\n",
-    "n_topics = list(range(5,101,5)) #from 5 to 100, increment by 5\n",
-    "num_runs = 2\n",
+    "n_topics = list(range(5,51,5)) + [75,100]\n",
+    "num_runs = 1\n",
     "\n",
     "col_names = [f\"iteration {i}\" for i in range(num_runs)]\n",
     "nmf_c = pd.DataFrame(index = n_topics, columns = col_names)\n",
@@ -355,7 +363,7 @@
    "source": [
     "# save results \n",
     "\n",
-    "nmf_c.to_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/nmf_bert.pkl\")"
+    "nmf_c.to_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/nmf_bert_20400715.pkl\")"
    ]
   },
   {
