--- a/src/03_ai_wiki/10_nmf_coherence_generate.ipynb
+++ b/src/03_ai_wiki/10_nmf_coherence_generate.ipynb
@@ -9,7 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Once deleted, variables cannot be recovered. Proceed (y/[n])?  y\n"
+     ]
+    }
+   ],
+   "source": [
+    "%reset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,19 +151,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO: Read in your coherence data (change the name of the file)\n",
-    "f = open('../../data/dspg21RnD/coherence_vars.sav', 'rb')\n",
+    "f = open('../../data/dspg21RnD/coherence_vars_bert.sav', 'rb')\n",
     "[corpus, id2word, docs] = pickle.load(f)\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +183,7 @@
        "Name: final_frqwds_removed, Length: 690814, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +215,7 @@
        "'multiprotein y_secretase proteolytically_cleave intramembrane region amyloid_precursorprotein_app turn plaque alzheimer ad patient catalyticcomponent y_secretase intramembrane_aspartyl_protease iap presenilin mutation inpresenilin directly link familial onset ad member iap family signalpeptide peptidase_spp proteolyze remnant peptide beencleave peptidase biochemistry individual spp onlybegin elucidate homologue kingdom life presenilin spp exhibitsignificant sequence similarity strongly share structural catalytic feature amolecular tractable spp likely drug presenilin y_secretase express solve crystal anextremophilic bacterial spp ortholog transition analog inhibitor substratemimic drug candidate screen silico intramembraneprotease insight biochemistry intramembrane_proteolysis enable ad drug screen'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +316,7 @@
     "        #TODO:manually adjust number of processes\n",
     "        cm = CoherenceModel(topics=topics, corpus=corpus, dictionary=id2word, texts=docs, \n",
     "                            coherence='c_v', #model for calculating coherence score\n",
-    "                            processes=12 #for smaller corpus, pronesses= number of cores - 1 \n",
+    "                            processes=19 #for smaller corpus, pronesses= number of cores - 1 \n",
     "                           ) #window_size=500 ) \n",
     "        coherence_values.append(cm.get_coherence())\n",
     "        t2 = time.time()\n",
@@ -321,38 +338,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 0\n",
-      "  Model time: 100.6097903251648\n",
-      "  Coherence time: 47.61140203475952\n",
-      "Number of topics = 5 complete.\n",
-      "  Model time: 113.88717198371887\n",
-      "  Coherence time: 59.43815517425537\n",
-      "Number of topics = 10 complete.\n",
-      "  Model time: 215.1825249195099\n",
-      "  Coherence time: 70.74016237258911\n",
-      "Number of topics = 15 complete.\n"
+      "Iteration 2\n"
      ]
     }
    ],
    "source": [
     "# code copied from https://datascienceplus.com/evaluation-of-topic-modeling-topic-coherence/\n",
     "# minor alterations made\n",
-    "n_topics = list(range(5,51,5)) + [75,100]\n",
-    "num_runs = 1\n",
+    "n_topics = list(range(5,51,5)) + [75,100] #takes about 4-5 hrs to run\n",
+    "\n",
+    "num_runs = 2\n",
+    "seed_start = 1\n",
     "\n",
     "col_names = [f\"iteration {i}\" for i in range(num_runs)]\n",
     "nmf_c = pd.DataFrame(index = n_topics, columns = col_names)\n",
     "\n",
-    "for i in range(num_runs):\n",
-    "    \n",
-    "    print(f\"Iteration {i}\")\n",
+    "#for i in range(seed_start,seed_start + num_runs - 1):\n",
+    "    #print(f\"Iteration {i}\")\n",
     "    \n",
     "    # run models\n",
-    "    c = nmf_metrics(doc_term_matrix=tf_idf, n_topics=n_topics, vectorizer=tfidf_vectorizer, \n",
-    "                         corpus=corpus, id2word=id2word, docs=docs, rand_start = (i)*len(n_topics))\n",
+    "    #c = nmf_metrics(doc_term_matrix=tf_idf, n_topics=n_topics, vectorizer=tfidf_vectorizer, \n",
+    "                         #corpus=corpus, id2word=id2word, docs=docs, rand_start = (i)*len(n_topics))\n",
     "    \n",
     "    # save results\n",
-    "    nmf_c[f\"iteration {i}\"] = c"
+    "    #nmf_c[f\"iteration {i}\"] = c\n",
+    "    \n",
+    "i=2\n",
+    "print(f\"Iteration {i}\")\n",
+    "c = nmf_metrics(doc_term_matrix=tf_idf, n_topics=n_topics, vectorizer=tfidf_vectorizer, \n",
+    "                         corpus=corpus, id2word=id2word, docs=docs, rand_start = (i)*len(n_topics))\n",
+    "nmf_c[f\"iteration {i}\"] = c"
    ]
   },
   {
@@ -361,16 +376,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save results \n",
-    "\n",
-    "nmf_c.to_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/nmf_bert_20400715.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# NMF"
+    "# TODO: save results, change file name\n",
+    "nmf_c.to_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/nmf_bert_01290720.pkl\")"
    ]
   },
   {
@@ -378,100 +385,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "lim_docs = docs\n",
-    "len(lim_docs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# input needed for LDA, NMF (all from Scikit-Learn) is one string per document (not a list of strings)\n",
-    "\n",
-    "text = []\n",
-    "\n",
-    "for token_list in lim_docs:\n",
-    "    text.append(\" \".join(token_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a TF-IDF document-term matrix for the AI corpus \n",
-    "\n",
-    "# TRY DIFFERENT PARAMETERS IN THE TF-IDF DOC-TERM MATRIX SET-UP\n",
-    "nmf_vectorizer = TfidfVectorizer(max_df=1.0, min_df=3, lowercase=True) #, max_features=int(len(lim_docs)/2))\n",
-    "\n",
-    "# by default TfidfVectorizer has l2 normalization for rows: \n",
-    "# from Scikit Learn documentation: Each output row will have unit norm, either: * ‘l2’: Sum of squares of vector \n",
-    "# elements is 1. The cosine similarity between two vectors is their dot product when l2 norm has been applied.\n",
-    "\n",
-    "nmf_tf_idf = nmf_vectorizer.fit_transform(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nmf_tf_idf.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AI_terms = nmf_vectorizer.get_feature_names()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AI_terms[1:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# topic modeling with NMF\n",
-    "\n",
-    "nmf_model = NMF(n_components=30, random_state=1)  # TRY DIFFERENT NUMBERS OF TOPICS\n",
-    "W = nmf_model.fit_transform(nmf_tf_idf)\n",
-    "H = nmf_model.components_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_topics(nmf_model, nmf_vectorizer, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hot and cold figure "
-   ]
+   "source": []
   }
  ],
  "metadata": {
