--- a/src/03_ai_wiki/10_nmf_coherence_generate.ipynb
+++ b/src/03_ai_wiki/10_nmf_coherence_generate.ipynb
@@ -8,8 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use BII, 20 cores, 3 hours, 100 Ram."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,17 +48,68 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "from gensim.models.coherencemodel import CoherenceModel"
+    "from gensim.models.coherencemodel import CoherenceModel\n",
+    "import ast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TODO:Input a dataframe that are ai related abstracts, need variables: final_frqwds_removed\n",
-    "abstracts = pd.read_csv(r'/home/zz3hs/git/dspg21RnD/data/dspg21RnD/bert_ai_abstracts.csv')   "
+    "#abstracts = pd.read_csv(r'/home/zz3hs/git/dspg21RnD/data/dspg21RnD/bert_ai_abstracts.csv')   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        ['effectiveness', 'computerize', 'instructiona...\n",
+       "1        ['direct', 'identification', 'basic', 'apply',...\n",
+       "2        ['generation', 'economist', 'harrod', 'domar',...\n",
+       "3        ['developer', 'create', 'prototype', 'playing_...\n",
+       "4        ['team', 'prototype', 'gowrite', 'platform', '...\n",
+       "                               ...                        \n",
+       "22553    ['public', 'health', 'child', 'mental', 'healt...\n",
+       "22554    ['purpose', 'advance', 'jacket_gpu_engine', 'm...\n",
+       "22555    ['american_indian', 'science', 'engineering', ...\n",
+       "22556    ['astep', 'observational', 'technology', 'enab...\n",
+       "22557    ['advance', 'genome', 'interactive', 'explorat...\n",
+       "Name: final_frqwds_removed, Length: 22558, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abstracts[\"final_frqwds_removed\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pd.set_option(\"display.max_colwidth\", -1)\n",
+    "#abstracts[abstracts[\"cosine_similarity_score\"] >0.55].ABSTRACT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#abstracts[abstracts[\"cosine_similarity_score\"]  <0.41].ABSTRACT"
    ]
   },
   {
@@ -63,7 +121,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs = abstracts[\"final_frqwds_removed\"]\n",
+    "\n",
+    "clean_docs = []\n",
+    "for doc in docs:\n",
+    "    doc = ast.literal_eval(doc)\n",
+    "    clean_docs.append(doc)\n",
+    "    \n",
+    "text = []\n",
+    "for abstract in clean_docs:\n",
+    "    text.append(\" \".join(abstract))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'effectiveness'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_docs[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'effectiveness computerize instructional adjunct standard integrate brain injury rehabilitation member satisfaction utilize computerize inform participant instructional selection maximize benefit'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfidf_vectorizer = TfidfVectorizer(max_df=1.0, min_df=3)\n",
+    "tf_idf = tfidf_vectorizer.fit_transform(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22558, 23678)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf_idf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,55 +237,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "docs = abstracts[\"final_frqwds_removed\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0         [multiprotein, y_secretase, proteolytically_cl...\n",
-       "1         [kissl, gene, encode, peptide, kisspeptin, bin...\n",
-       "2         [biophysical, basis, thermodynamics_kinetic, m...\n",
-       "3         [obesity, adverse_pregnancyoutcome, great, hea...\n",
-       "4         [local, potato, advisory, express, interest, m...\n",
-       "                                ...                        \n",
-       "690809    [pathophysiology, schizophrenia, advance, thed...\n",
-       "690810    [alzheimer, ad, amyotrophic_lateral_sclerosis_...\n",
-       "690811    [highest, mortality, acute, care, encounter, r...\n",
-       "690812    [paradigm, kidney, largely, stagnant, decade, ...\n",
-       "690813    [division, intramural, population, health, dip...\n",
-       "Name: final_frqwds_removed, Length: 690814, dtype: object"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Use keep_n = 100,000 defalt.\n"
+     ]
     }
    ],
    "source": [
-    "docs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#TODO: run the following code to generate id2word and corpus\n",
-    "#id2word, corpus = createVars(docs)\n",
-    "\n",
+    "#id2word, corpus = createVars(clean_docs)\n",
     "#TODO: RENAME the file, run the code to save the output\n",
-    "#pickle.dump([corpus, id2word, docs], open('../../data/dspg21RnD/coherence_vars_XXXXXX.sav','wb'))"
+    "docs  = clean_docs\n",
+    "#pickle.dump([corpus, id2word, docs], open('../../data/dspg21RnD/coherence_vars_XXX.sav','wb'))"
    ]
   },
   {
@@ -151,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,45 +277,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0         [multiprotein, y_secretase, proteolytically_cl...\n",
-       "1         [kissl, gene, encode, peptide, kisspeptin, bin...\n",
-       "2         [biophysical, basis, thermodynamics_kinetic, m...\n",
-       "3         [obesity, adverse_pregnancyoutcome, great, hea...\n",
-       "4         [local, potato, advisory, express, interest, m...\n",
-       "                                ...                        \n",
-       "690809    [pathophysiology, schizophrenia, advance, thed...\n",
-       "690810    [alzheimer, ad, amyotrophic_lateral_sclerosis_...\n",
-       "690811    [highest, mortality, acute, care, encounter, r...\n",
-       "690812    [paradigm, kidney, largely, stagnant, decade, ...\n",
-       "690813    [division, intramural, population, health, dip...\n",
-       "Name: final_frqwds_removed, Length: 690814, dtype: object"
+       "22558"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "docs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = []\n",
-    "\n",
-    "for abstract in docs:\n",
-    "    text.append(\" \".join(abstract))"
+    "len(docs)"
    ]
   },
   {
@@ -212,10 +303,59 @@
     {
      "data": {
       "text/plain": [
-       "'multiprotein y_secretase proteolytically_cleave intramembrane region amyloid_precursorprotein_app turn plaque alzheimer ad patient catalyticcomponent y_secretase intramembrane_aspartyl_protease iap presenilin mutation inpresenilin directly link familial onset ad member iap family signalpeptide peptidase_spp proteolyze remnant peptide beencleave peptidase biochemistry individual spp onlybegin elucidate homologue kingdom life presenilin spp exhibitsignificant sequence similarity strongly share structural catalytic feature amolecular tractable spp likely drug presenilin y_secretase express solve crystal anextremophilic bacterial spp ortholog transition analog inhibitor substratemimic drug candidate screen silico intramembraneprotease insight biochemistry intramembrane_proteolysis enable ad drug screen'"
+       "['effectiveness',\n",
+       " 'computerize',\n",
+       " 'instructional',\n",
+       " 'adjunct',\n",
+       " 'standard',\n",
+       " 'integrate',\n",
+       " 'brain',\n",
+       " 'injury',\n",
+       " 'rehabilitation',\n",
+       " 'member',\n",
+       " 'satisfaction',\n",
+       " 'utilize',\n",
+       " 'computerize',\n",
+       " 'inform',\n",
+       " 'participant',\n",
+       " 'instructional',\n",
+       " 'selection',\n",
+       " 'maximize',\n",
+       " 'benefit']"
       ]
      },
      "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = []\n",
+    "for doc in docs:\n",
+    "    text.append(\" \".join(doc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'effectiveness computerize instructional adjunct standard integrate brain injury rehabilitation member satisfaction utilize computerize inform participant instructional selection maximize benefit'"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +456,7 @@
     "        #TODO:manually adjust number of processes\n",
     "        cm = CoherenceModel(topics=topics, corpus=corpus, dictionary=id2word, texts=docs, \n",
     "                            coherence='c_v', #model for calculating coherence score\n",
-    "                            processes=19 #for smaller corpus, pronesses= number of cores - 1 \n",
+    "                            processes=19 #for smaller corpus, pronesses= number of cores - 5\n",
     "                           ) #window_size=500 ) \n",
     "        coherence_values.append(cm.get_coherence())\n",
     "        t2 = time.time()\n",
@@ -338,36 +478,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 2\n"
+      "Iteration 0\n",
+      "  Model time: 3.132255792617798\n",
+      "  Coherence time: 2.2182235717773438\n",
+      "Number of topics = 5 complete.\n",
+      "  Model time: 6.946704864501953\n",
+      "  Coherence time: 3.4823157787323\n",
+      "Number of topics = 10 complete.\n",
+      "  Model time: 10.436957359313965\n",
+      "  Coherence time: 4.005496978759766\n",
+      "Number of topics = 15 complete.\n",
+      "  Model time: 10.771311283111572\n",
+      "  Coherence time: 4.4601075649261475\n",
+      "Number of topics = 20 complete.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zz3hs/.conda/envs/crystal_bert/lib/python3.8/site-packages/sklearn/decomposition/_nmf.py:1076: ConvergenceWarning: Maximum number of iterations 200 reached. Increase it to improve convergence.\n",
+      "  warnings.warn(\"Maximum number of iterations %d reached. Increase it to\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Model time: 30.37483859062195\n",
+      "  Coherence time: 5.9043214321136475\n",
+      "Number of topics = 25 complete.\n",
+      "  Model time: 33.9063618183136\n",
+      "  Coherence time: 6.94676661491394\n",
+      "Number of topics = 30 complete.\n"
      ]
     }
    ],
    "source": [
     "# code copied from https://datascienceplus.com/evaluation-of-topic-modeling-topic-coherence/\n",
     "# minor alterations made\n",
-    "n_topics = list(range(5,51,5)) + [75,100] #takes about 4-5 hrs to run\n",
+    "n_topics = list(range(5,51,5)) + [75,100,125] #takes about 4-5 hrs to run\n",
     "\n",
-    "num_runs = 2\n",
-    "seed_start = 1\n",
+    "num_runs = 10\n",
     "\n",
     "col_names = [f\"iteration {i}\" for i in range(num_runs)]\n",
     "nmf_c = pd.DataFrame(index = n_topics, columns = col_names)\n",
     "\n",
-    "#for i in range(seed_start,seed_start + num_runs - 1):\n",
-    "    #print(f\"Iteration {i}\")\n",
+    "for i in range(num_runs):\n",
+    "    print(f\"Iteration {i}\")\n",
     "    \n",
     "    # run models\n",
-    "    #c = nmf_metrics(doc_term_matrix=tf_idf, n_topics=n_topics, vectorizer=tfidf_vectorizer, \n",
-    "                         #corpus=corpus, id2word=id2word, docs=docs, rand_start = (i)*len(n_topics))\n",
+    "    c = nmf_metrics(doc_term_matrix=tf_idf, n_topics=n_topics, vectorizer=tfidf_vectorizer, \n",
+    "                         corpus=corpus, id2word=id2word, docs=docs, rand_start = (i)*len(n_topics))\n",
     "    \n",
     "    # save results\n",
-    "    #nmf_c[f\"iteration {i}\"] = c\n",
-    "    \n",
-    "i=2\n",
-    "print(f\"Iteration {i}\")\n",
-    "c = nmf_metrics(doc_term_matrix=tf_idf, n_topics=n_topics, vectorizer=tfidf_vectorizer, \n",
-    "                         corpus=corpus, id2word=id2word, docs=docs, rand_start = (i)*len(n_topics))\n",
-    "nmf_c[f\"iteration {i}\"] = c"
+    "    nmf_c[f\"iteration {i}\"] = c"
    ]
   },
   {
@@ -377,7 +542,7 @@
    "outputs": [],
    "source": [
     "# TODO: save results, change file name\n",
-    "nmf_c.to_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/nmf_bert_01290720.pkl\")"
+    "nmf_c.to_pickle(\"/home/zz3hs/git/dspg21RnD/data/dspg21RnD/nmf_bert_10.pkl\")"
    ]
   },
   {
