--- a/src/03_ai_wiki/09_score_viz.ipynb
+++ b/src/03_ai_wiki/09_score_viz.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "[690807 rows x 76 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,9 +955,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.39798149664409616"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sd = abstracts_all.mean_abstract_score.std()\n",
     "mean = abstracts_all.mean_abstract_score.mean()"
@@ -965,28 +976,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.39993584744883753"
+       "0.42436523250810476"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cutoff = mean + 2*sd\n",
+    "cutoff = mean + 2.5*sd\n",
     "cutoff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1019,18 +1030,18 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 22558 entries, 43 to 690768\n",
+      "Int64Index: 7658 entries, 130 to 690682\n",
       "Data columns (total 6 columns):\n",
       " #   Column                   Non-Null Count  Dtype  \n",
       "---  ------                   --------------  -----  \n",
-      " 0   PROJECT_ID               22558 non-null  int64  \n",
-      " 1   ABSTRACT                 22558 non-null  object \n",
-      " 2   final_frqwds_removed     22558 non-null  object \n",
-      " 3   PROJECT_TITLE            22558 non-null  object \n",
-      " 4   cosine_similarity_score  22558 non-null  float64\n",
-      " 5   IS_AI_BERT               22558 non-null  bool   \n",
+      " 0   PROJECT_ID               7658 non-null   int64  \n",
+      " 1   ABSTRACT                 7658 non-null   object \n",
+      " 2   final_frqwds_removed     7658 non-null   object \n",
+      " 3   PROJECT_TITLE            7658 non-null   object \n",
+      " 4   cosine_similarity_score  7658 non-null   float64\n",
+      " 5   IS_AI_BERT               7658 non-null   bool   \n",
       "dtypes: bool(1), float64(1), int64(1), object(3)\n",
-      "memory usage: 1.1+ MB\n"
+      "memory usage: 366.4+ KB\n"
      ]
     }
    ],
@@ -1041,14 +1052,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results:  3.2654561983303583 (N= 22558 )% of the projects are classified as AI related.\n"
+      "Results:  1.1085585409528276 (N= 7658 )% of the projects are classified as AI related.\n"
      ]
     }
    ],
